--- a/Client/Components/EditCategoryComponent.razor
+++ b/Client/Components/EditCategoryComponent.razor
@@ -14,7 +14,7 @@
                     <button class="closeOverlay" @onclick="openCategoryOverlay"><img src="../css/images/close x.svg" /></button>
                     <h3 class="popupTitle">@popupTitle</h3>
                     <div class="titleAndIcon">
-                        <input class="catTitle" type="text" placeholder="שם הקטגוריה" maxlength="18" minlength="2" @oninput="titleLengthCounter" />
+                        <input class="catTitle" type="text" placeholder="שם הקטגוריה" maxlength="18" minlength="2" @oninput="titleLengthCounter" @bind="@titleInput" />
                         @if (titleInput == null || titleInput == "")
                         {
                             <span style="color:red">0/17</span>
@@ -211,6 +211,7 @@
     {
         ogCatName = categoryToEdit.categroyTitle;
 
+
         if (ogCatName == "הכנסות")
         {
             disabledEditOfIncomeTitle = true;
@@ -219,6 +220,7 @@
         if (categoryToEdit.categroyTitle != "" && categoryToEdit.categroyTitle != null)
         {
             titleInputLength = ogCatName.Length;
+            titleInput = categoryToEdit.categroyTitle;
         }
         
     }
