--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -454,3 +454,97 @@ input:checked + .slider:before {
     bottom: 0;
 }
 
+.modal-close-btn{
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+}
+
+.storyImg {
+    width: 80%;
+}
+
+.storyWindow {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: right;
+}
+
+.progress-nav-bar {
+    display: flex;
+    justify-content: center;
+    width: 70%;
+    margin: 2vh 0;
+    column-gap: 1vh;
+}
+
+.outerStoryPhase {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.storyPhase {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    width: 35%;
+    height: 1vh;
+    border-radius: 0.3rem;
+    background-color: #D6D9F1;
+}
+
+.storyTitle {
+    font-size: 1.1rem;
+    font-weight: 700;
+    margin-bottom: 1vh;
+}
+
+.firstStoryLike {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.storyTextWrapper{
+    display:flex;
+    flex-direction:column;
+}
+
+.likeIcon {
+    font-size: 3rem;
+}
+
+.titleFirstStory {
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.divider {
+    background-color: #D6D9F1;
+    height: 0.2vh;
+}
+
+.outerFirstStory {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2vh;
+}
+
+.imgWrapper {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
